<resources>
    <string name="app_name">IsoftScore</string>

    <string name="prev_match">Prev</string>
    <string name="next_match">Next</string>
    <string name="match">Match</string>
    <string name="match_detail">Match Detail</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="mid_field">Mid Field</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="vs">VS</string>
    <string name="favorite">Favorites</string>
    <string name="add_to_fav">Add to Favorite</string>
    <string name="remove_from_fav">Remove from Favorite</string>
    <string name="remove_all_fav">Remove all Favorite</string>
    <string name="all_next_match">List of Next Match</string>
    <string name="all_prev_match">List of Prev Match</string>
    <string name="all_fav_match">List of Favorite Match</string>
    <string name="all_team">List of Team</string>
    <string name="all_fav_team">List of Favorite Team</string>
    <string name="open_search">Open Search</string>
    <string name="search">Search...</string>
    <string name="search_match">Search Match</string>
    <string name="no_data">No Data</string>
    <string name="team">Team</string>
    <string name="team_list">Team List</string>
    <string name="overview">Overview</string>
    <string name="player">Player</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="search_team">Search Team</string>

</resources>
