<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/progressbar_search"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:mpb_progressStyle="horizontal"
        app:mpb_useIntrinsicPadding="false"
        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay"
        tools:listitem="@layout/item_match" />

    <TextView
        android:id="@+id/textview_empty_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_data"
        android:textSize="16sp"
        android:visibility="gone"/>

</RelativeLayout>